force-app/main/default/objects/Apttus_Config2__AppliedExpressionInfo__c/Apttus_Config2__AppliedExpressionInfo__c.object-meta.xml
<CustomObject>
    <label>Applied Expression Info</label>
    <nameField>
        <label>Applied Expression Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Expression Infos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>