force-app/main/default/objects/Apttus_Config2__AppliedExpressionInfo__c/fields/Apttus_Config2__Locked__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>