force-app/main/default/objects/Apttus_Config2__AppliedExpressionInfo__c/fields/Apttus_Config2__SourceFields__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceFields__c</fullName>
    <label>SourceFields</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>