force-app/main/default/objects/Apttus_Config2__AppliedExpressionInfo__c/fields/Apttus_Config2__SourceIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceIds__c</fullName>
    <label>Source Ids</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>