force-app/main/default/objects/Apttus_Config2__AppliedExpressionInfo__c/fields/Apttus_Config2__TargetPrimaryLineNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TargetPrimaryLineNumber__c</fullName>
    <label>Target Primary Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>