force-app/main/default/objects/Apttus_Config2__AppliedExpressionInfo__c/fields/Apttus_Config2__UnresolvedPointers__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UnresolvedPointers__c</fullName>
    <description>Criteria specifying whether addition of items requires evaluation of rules.</description>
    <label>Unresolved Pointers</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>